<resources>
    <string name="app_name">TPInmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sistema_inmobiliaria_avg">Sistema Inmobiliaria AVG</string>
    <string name="inicio">Inicio</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inquilino">Inquilino</string>
    <string name="contrato">Contrato</string>
    <string name="logout">LogOut</string>
    <string name="contratos_vigentes">Contratos vigentes</string>
</resources>