<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tpinmobiliaria.ui.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.tpinmobiliaria.ui.inmuebles.InmuebleFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmuebles" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.tpinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.tpinmobiliaria.ui.contratos.ContratoFragment"
        android:label="@string/contrato"
        tools:layout="@layout/fragment_contrato" />

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.example.tpinmobiliaria.ui.inquilinos.InquilinoFragment"
        android:label="@string/inquilino"
        tools:layout="@layout/fragment_inquilino" />

    <fragment
        android:id="@+id/logOutFragment"
        android:name="com.example.tpinmobiliaria.ui.logOut.LogOutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_log_out" />
</navigation>